
2003-04-05  Nathan Rutman <nthn1@yahoo.com>

	* backend/canon630u-common.c: Removed last change in offset/gain
	  calculation, which croaked for some cases.  Give up early if we
	  can't talk on the USB. 
	* backend/canon630u.c: Added option to force scanner recalibration.

2003-04-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/dll.c: Added some missing debug messages. Fixed a warning.

2003-04-03  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* TODO: removed mustek_pp entry (Check that global variables are 
	  initialized propperly

2003-04-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* lib/Makefile.in: Recompile all targets if necessary.
	* sanei/sanei_scsi.c: Fixed some warnings.
	* include/md5.h: Declare md5_buffer.
	* sanei/sanei_constrain_value.c: Removed unnecessary variable.
	* backend/agfafocus.c: Fixed some warnings.
	* backend/as6e.c: Fixed some warnings.
	* backend/coolscan.c backend/coolscan-scsi.h: Fixed a bunch of
	  compilation warnings.
	* backend/djpeg.c: Fixed some warnings. 
	* backend/dmc.c: Fixed some warnings. 

2003-04-03  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp.c: Fixed a potential crash bug that could be
          triggered when calling sane_init/sane_get_devices/sane_exit 
          multiple times, and fixed some minor bugs to pass the 
          frontend/tstbackend.c tests.

2003-04-03  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan.h backend/snapscan-scsi.c
	  backend/snapscan-options.c backend/snapscan.conf
	  doc/descriptions/snapscan.desc:
	  SnapScan backend 1.4.25 - added support for Epson Perfection 660,
	  enhanced support for Acer 5000

2003-04-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-as6e.man: Added info about $PATH. Minor formatting fixes.
	* doc/sane.man: Reorganization. Updated DEVELOPER'S DOCUMENTATION.
	  Rewrote PROBLEMS in a more user-centric way. Added "HOW CAN YOU